<resources>
    <string name="app_name">见声听力测试</string>
    <string name="company_name">见声科技</string>
    <string name="company_mp">公众号：seeingVoice</string>
    <string name="version">当前版本：%1$s</string>
    <string name="country_and_area">区号</string>
    <string name="country_china">中国大陆（+86）</string>
    <string name="china_areacode">+86</string>
    <string name="slogan">你说我看，重获新声</string>
    <string name="request_permission">权限设置</string>
    <string name="request_permission_location">在设置-应用-听友-权限中开启位置信息权限，以正常使用位置共享、搜索、摇一摇、扫街景、附近的人、听友连Wi-Fi等功能</string>
    <string name="request_permission_camera">在设置-应用-听友-权限中开启相机权限，以正常使用拍照、小视频、扫一扫等功能</string>
    <string name="request_permission_storage">为确保接收到的图片、视频等内容能被正常浏览，听友需要申请手机存储权限。</string>
    <string name="request_permission_record_audio">在设置-应用-听友-权限中开启麦克风权限，以正常使用语音、小视频、摇一摇功能</string>
    <string name="request_permission_contacts">在设置-应用-听友-权限中开启通讯录权限，以正常使用联系人查找功能</string>
    <string name="request_permission_title">权限说明</string>
    <string name="request_permission_granted_storage">已授权，请选择您喜欢的头像。</string>
    <string name="request_permission_granted">已授权，请点击<b>开始</b>体验<b>你说我看</b>。</string>
    <string name="permission_rationale_record">需要麦克风权限转化声音为文字，实现你说我看的功能。</string>
    <string name="permission_rationale_storage">需要存储权限保存记录及头像。</string>
    <string name="phone">手机号</string>
    <string name="uchat_id">听友号</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="user_login_rememberPWD">记住密码</string>
    <string name="user_login_register">快捷注册</string>
    <string name="user_login_login">登 录</string>
    <string name="user_login_agree">已同意</string>
    <string name="user_login_input_phone">请输入手机号码</string>
    <string name="user_login_username">请快捷注册后，输入手机号码</string>
    <string name="user_login_enterPWD">请输入密码</string>
    <string name="user_login_success">登录成功，系统加载中</string>
    <string name="user_login_fail">用户名或密码不正确，请重新输入或快捷注册。</string>
    <string name="user_login_ing">登陆中</string>
    <string name="user_login_agree_agreement">请确定阅读并同意《用户协议》和《隐私政策》。</string>
    <string name="user_register_username">手机号（必填）</string>
    <string name="user_register_email">电子邮箱（可选）</string>
    <string name="user_register_pwd">设定6位数字或字母密码</string>
    <string name="user_register_pwd2">密码确认</string>
    <string name="user_register_button">注 册</string>
    <string name="user_register_lead">为保护隐私，请“快捷注册”后继续↑↑↑</string>
    <string name="user_register_ok">验证通过，注册成功！</string>
    <string name="user_register_pwd_diff">两次密码不一致，请重新输入密码。</string>
    <string name="user_register_remind">请输入用户名、密码、手机号码。</string>
    <string name="user_register_input">注册资料填写</string>
    <string name="advice_name">好名字可以让你的朋友更容易记住你。</string>
    <string name="advice_close_account">账号一旦关闭将无法恢复。</string>
    <string name="phone_wrong">本号码有误。请更正后继续。</string>
    <string name="nick_name">昵称</string>
    <string name="nick_name_example">卧龙</string>
    <string name="personal_info">个人信息</string>
    <string name="contact_info">手机通讯录匹配功能暂时关闭。点击下方按钮可更改手机号。</string>
    <string name="avatar">头像</string>
    <string name="click_to_start">点击开始</string>
    <string name="click_to_continue">点击继续</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="edit">编辑</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="about_us">关于我们</string>
    <string name="privacy_policy">《隐私政策》</string>
    <string name="user_agreement">《用户协议》</string>
    <string name="copyright_cn">见声科技 版权所有</string>
    <string name="copyright_en1">Copyright 2018–2022 seeingVoice.</string>
    <string name="copyright_en2">ALL Rights Reserved.</string>
    <string name="intro">功能介绍</string>
    <string name="complain">投诉与建议</string>
    <string name="keep_in_touch">保持联系</string>
    <string name="remove_account">注销账号</string>
    <string name="account_security">账号与安全</string>
    <string name="security_center">听友安全中心</string>
    <string name="security_center_tips">如果你遇到听友被盗，无法登陆设备等问题，可以前往安全中心</string>
    <string name="sex">性别</string>
    <string name="region">地区</string>
    <string name="whats_up">个性签名</string>
    <string name="more">更多</string>
    <string name="more_info">更多信息</string>
    <string name="edit_email">修改邮件地址</string>
    <string name="edit_email_tips">如果你更改了邮件地址，你需要对邮件地址重新进行验证。</string>
    <string name="edit_device_name">修改手机名</string>
    <string name="edit_device_name_tips">你可以为你的设备设置一个名字</string>
    <string name="edit_name">更改名字</string>
    <string name="edit_region">更改地区</string>
    <string name="edit_phone">更改电话号码</string>
    <string name="set_gender">设置性别</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="sex_nosay">保密</string>
    <string name="modify_password">设置密码</string>
    <string name="modify_password_hint">请设置听友密码。</string>
    <string name="old_password">原密码</string>
    <string name="old_password_forget">如忘记原密码，请退出后重新注册。</string>
    <string name="old_password_hint">填写原密码</string>
    <string name="new_password">新密码</string>
    <string name="new_password_hint">填写新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="confirm_password_hint">再次填写确认</string>
    <string name="phone_not_register">号码、密码不匹配。</string>
    <string name="password_rules">密码必须是6–16位的数字、字符组合(不能是纯数字)</string>
    <string name="no_space">电话、密码不能为空。</string>
    <string name="no_space2">电话、密码、昵称不能为空。</string>
    <string name="old_password_empty">原密码不能为空</string>
    <string name="new_password_empty">新密码不能为空</string>
    <string name="confirm_password_empty">确认密码不能为空</string>
    <string name="old_password_incorrect">原密码不正确</string>
    <string name="confirm_password_incorrect">两次密码不一致</string>
    <string name="modify_password_success_tips">听友密码设置成功，以后可通过手机号+听友密码登录听友</string>
    <string name="modify_nick_name_success_tips">恭喜，改名成功！</string>
    <string name="global_remind">温馨提示</string>
    <string name="global_leftear">左耳</string>
    <string name="global_rightear">右耳</string>
    <string name="global_settings">设置</string>
    <string name="global_quit">退出</string>
    <string name="global_left">左</string>
    <string name="global_right">右</string>
    <string name="global_and">和</string>
    <string name="global_exit">"再按一次关闭程序！"</string>
    <string name="global_agree">同意</string>
    <string name="global_disagree">不同意</string>
    <string name="global_copyright">Copyright© 2019 2020 seeingvoice.\nAll Rights Reserved</string>
    <string name="global_exitnow">本应用仅要求听测所必须的最低限度的权限。请放心使用。</string>
    <string name="global_permission_denied">本应用需要录音权限获取周围噪音音量。如拒绝授权，则噪音功能无法使用。自动返回听测。</string>
    <string name="skip">跳过</string>
    <string name="next">下一步</string>
    <string name="gotit">进入</string>
    <string name="drawer_title_feedback">在线服务</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="drawer_greetings">欢迎</string>
    <string name="drawer_noise_title">噪音检测</string>
    <string name="drawer_noise_bad">额，有点儿吵:(</string>
    <string name="drawer_noise_ok">环境不错(Y)</string>
    <string name="drawer_noise_notice">40dB（绿色区域）就可以了。30以下就更好了。</string>
    <string name="drawer_feedback_content1">见声公众号seeingvoice持续更新本听测软件的用法和技巧。        \n\n请扫描二维码加入。</string>
    <string name="drawer_feedback_content2">或者微信搜索公众号：<b>seeingVoice</b> 加入。    \n\n在公众号任意文章下方留言，24小时必有真人帮您解决问题。        \n\n念念不忘，必有回响。    \n http://seeingVoice.com    </string>
    <string name="topbar_save">为保护隐私，请截屏保存并分享。 </string>
    <string name="topbar_save_popout">已经截屏保存听力图了么？</string>
    <string name="topbar_save_title">重测</string>
    <string name="topbar_save_yes">保存了</string>
    <string name="topbar_save_no">还没有</string>
    <string name="topbar_share">分享</string>
    <string name="topbar_share_content">"见声听力测试App \n3分钟获得听力图。\n</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="disclaimer_title">用户协议和隐私政策</string>
    <string name="disclaimer_text">请您务必审慎阅读、充分理解《隐私政策》和《用户协议》各条款，包括但不限于：
        \n\n为了向您提供准确的听力测试，系统需要将标准测试音强度和环境噪音强度进行对比和调整，因此会请求开放录制音频权限。您可以在“设置”中查看、变更、删除并管理您的授权。
        \n\n请您在使用本应用前点击如下《隐私政策》和《用户协议》了解详细信息。
        \n\n如您同意，请点击“同意”开始接受我们的服务。</string>
    <string name="pt_headphones">请带好耳机</string>
    <string name="pt_btn_start">点击开始听力测试</string>
    <string name="pt_reminder"> 请带好耳机，找一个不嘈杂的所在。
        \n\n多数人可以在2-5分钟内完成整个测试。听力越好，测试时间越短。
        \n\n您只需要根据实际情况点击“我听见了”或者“我没听见”，就可以获得一份相对严谨的听力报告。
        \n\n测试结果仅供参考，不具有诊断性。</string>
    <string name="t4_title">快速筛查测试</string>
    <string name="t4_notice">本测试具有一定参考价值，但不作为诊断依据。\n欢迎加微信seeingvoicear，公众号seeingvoice探讨。</string>
    <string name="t4_progressing_left">左耳进度：%1$d%%</string>
    <string name="t4_progressing_right">右耳进度：%1$d%%</string>
    <string name="t4_hz">%1$d赫兹</string>
    <string name="t4_db">%1$d分贝</string>
    <string name="t4_countdown">倒计时%1$d秒</string>
    <string name="t4_progressing_left0">左耳进度：0%</string>
    <string name="t4_progressing_right0">右耳进度：0%</string>
    <string name="t4_progressing_left100">左耳进度：100%</string>
    <string name="t4_progressing_right100">右耳进度:100%</string>
    <string name="t4_timing">倒计时3S</string>
    <string name="t4_result">查看测试结果</string>
    <string name="t4_nothearing">我没听见</string>
    <string name="t4_canhear">我听见了</string>
    <string name="t4_tone">音调：</string>
    <string name="t4_1000hz">1000赫兹</string>
    <string name="t4_volume">音量：</string>
    <string name="t4_10db">10分贝</string>
    <string name="t4_start">开 始</string>
    <string name="t4_volumeDB">音量(分贝DB)</string>
    <string name="t4_start_right">点击开始，进行右耳测试</string>
    <string name="t4_left_end">左耳测试结束。右耳测试即将开始</string>
    <string name="t4_volume_change">音量已校准，完成听测前请勿自行调节！</string>
    <string name="t4_done">播放完毕，点击继续。</string>
    <string name="t4_toofast">点击过快！</string>
    <string name="chart_title">听力图(</string>
    <string name="chart_tab3">知识</string>
    <string name="chart_title_explanation">听力报告(%1$s)</string>
    <string name="chart_xaxisleft">低音</string>
    <string name="chart_xaxisright">高音</string>
    <string name="chart_xleft">-X-左耳</string>
    <string name="chart_oright">-O-右耳</string>
    <string name="chart_line">听损临界线</string>
    <string name="chart_xaxismiddle">频率、音调(赫兹Hz)</string>
    <string name="chart_analysis3">25分贝是听损临界点。25分贝以内的，3个月后再来测。
                                    \n\n超过25了？问题可大可小。全国每四、五个人中就有一个超过25。公知总拿国人声音大说事儿，真的不是素质问题，只是耳朵问题而已。
                                    \n\n超过40，属于联合国认定的听力残障范畴。尽早就医。虽说医疗手段乏善可陈，了解一下现状也是好的。
                                    \n\n高频（4000赫兹以上）损失直接导致“听不清”。因为辅音基本在高频频段。
                                    \n\n唱歌不好听你以为是五音不全，实际上更有可能的是“五音没听全”。嗓子缺个音的情况罕见，
                                    但是耳朵少听了一个音的太多了。十步之内，必有芳草；五人之中，必有弱听。
                                    听都没听见，唱出来就更难了。所有唱歌不好听的人，都得测一测耳朵。
                                    \n\n周围总有几个嗓门儿大的人。测一测耳朵，一测一个准。
                                    \n\n听力图俗称“香蕉图”。因为健听线和弱听线一般会形成一个香蕉一样的曲线。
                                    \n\n和其他疾病不同，多数弱听一开始无法自我感知。自我感觉良好，周围人已经忍无可忍。
                                    \n\n90%以上的听障是神经性的。剩下不到10%是传导性听障的。传导性的根据原因不同或许可以医治。神经性的目前为止医药手段匮乏。骨导耳机只是解决一小部分气道故障的传导性听障，对神经性听障作用为0。
                                    \n\n听障一般需要佩戴助听器。也可以通过专用的手机软件将声音转化为文字并显示在手机屏幕上。通过看见而听见。应用商店搜“<b>见声看见</b>”即可。
                                    \n\n还有其他问题？加公众号<b>seeingvoice</b>或者加微信<b>seeingvoicear</b>了解更多。    </string>
    <string name="chart_all">%4$s综合听损%3$d分贝，不同音调下听损范围在%1$d分贝到%2$d分贝之间。</string>
    <string name="chart_key">\n\n中低频听损%1$d分贝，</string>
    <string name="chart_hf">\n\n高频听损%1$d分贝，</string>
    <string name="chart_good">健</string>
    <string name="chart_hearing">听</string>
    <string name="chart_mini">轻</string>
    <string name="chart_middle">中</string>
    <string name="chart_heavy">重</string>
</resources>