<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_privacy_policy" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/global_remind"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/et_rgsPhoneNum"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints="ddddd"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_phone"
        android:drawableEnd="@drawable/ic_star"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/user_register_username"
        android:inputType="phone"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/edit_text_nick_name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="ddd"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/nick_name"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_rgsPhoneNum"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/et_rgsPsw1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="dd"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_lock"
        android:drawableEnd="@drawable/ic_star"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/user_register_pwd"
        android:inputType="textPassword"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_nick_name" />

    <EditText
        android:id="@+id/et_rgsPsw2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="ddd"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_lock"
        android:drawableEnd="@drawable/ic_star"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/user_register_pwd2"
        android:inputType="textWebPassword"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_rgsPsw1" />


    <CheckBox
        android:id="@+id/CB_disclaim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:gravity="center_vertical"
        android:text="@string/global_agree"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_rgs"
        app:layout_constraintEnd_toStartOf="@+id/tv_user_agreement"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_rgsPsw2"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tv_privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/privacy_policy"
        android:textColor="@color/navigationColor"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/tv_user_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/user_agreement"
        android:textColor="@color/navigationColor"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/CB_disclaim"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/CB_disclaim"
        app:layout_constraintTop_toTopOf="@+id/CB_disclaim" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/global_and"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_user_agreement"
        app:layout_constraintEnd_toStartOf="@+id/tv_privacy_policy"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_user_agreement"
        app:layout_constraintTop_toTopOf="@+id/tv_user_agreement" />

    <Button
        android:id="@+id/btn_rgs"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bg"
        android:text="@string/user_register_button"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_rgsPsw2"
        app:layout_constraintVertical_bias="0.5" />
    <TextView
        android:id="@+id/tv_version"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:gravity="center"
        android:text="@string/version"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>